fileMixinTest